@@ -30,20 +30,23 @@ class Smarty_Internal_Compile_Private_Object_Function extends Smarty_Internal_Co
         $this->required_attributes = array();
         $this->optional_attributes = array('_any'); 
         // check and get attributes
-        $_attr = $this->_get_attributes($args);
+        $_attr = $this->_get_attributes($args); 
         // convert attributes into parameter array string
-        $_paramsArray = array();
-        foreach ($_attr as $_key => $_value) {
-            if (is_int($_key)) {
-                $_paramsArray[] = "$_key=>$_value";
-            } else {
-                $_paramsArray[] = "'$_key'=>$_value";
+        if ($this->compiler->smarty->registered_objects[$tag][2]) {
+            $_paramsArray = array();
+            foreach ($_attr as $_key => $_value) {
+                if (is_int($_key)) {
+                    $_paramsArray[] = "$_key=>$_value";
+                } else {
+                    $_paramsArray[] = "'$_key'=>$_value";
+                } 
             } 
+            $_params = 'array(' . implode(",", $_paramsArray) . ')';
+            $output = "<?php echo \$_smarty_tpl->smarty->registered_objects['{$tag}'][0]->{$methode}({$_params},\$_smarty_tpl->smarty,\$_smarty_tpl);?>";
+        } else {
+            $_params = implode(",", $_attr);
+            $output = "<?php echo \$_smarty_tpl->smarty->registered_objects['{$tag}'][0]->{$methode}({$_params});?>";
         } 
-        $_params = 'array(' . implode(",", $_paramsArray) . ')'; 
-        // compile code
-        $output = '<?php echo $_smarty_tpl->smarty->registered_objects[\''.$tag.'\'][0]->' . $methode . '(' . $_params . ',$_smarty_tpl->smarty,$_smarty_tpl);?>';
-
         return $output;
     } 
 } 
